<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent">
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.reezx.android.timetable.HomeFragment">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        app:cardElevation="4dp"
        android:background="@color/colorPrimaryLight"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="130dp"
                android:background="@color/primary"
                android:layout_height="130dp"
                app:cardElevation="15dp"
                android:clipToPadding="true"
                android:id="@+id/view2"
                app:cardCornerRadius="65dp"
                android:innerRadius="65dp"
                android:shape="ring"
                android:layout_marginEnd="25dp"
                android:thicknessRatio="1.9">
            <ImageView
                android:contentDescription="@string/profile_picture"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:background="@drawable/image_circular"
                android:id="@+id/ImageViewHomeFragment"/>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_toEndOf="@id/view2"
                android:orientation="vertical"
                android:layout_centerVertical="true"
                android:layout_marginBottom="10dp"
                android:layout_alignBottom="@id/view2"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/app_name"
                    style="@style/TextView_Heading"
                    android:textColor="@color/white"
                    android:id="@+id/TextViewHomeFragmentName"
                    android:layout_height="wrap_content" />

                <View
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    style="@style/Divider" />

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/author"
                    style="@style/TextView_SubHeading"
                    android:textColor="@color/white"
                    android:id="@+id/TextViewHomeFragmentEmail"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/FrameLayoutHomeFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </android.support.v7.widget.CardView>


</FrameLayout>

</ScrollView>

